test-suite/output/ErrorLocation_tac_in_term_1.out
File "./output/ErrorLocation_tac_in_term_1.v", line 2, characters 21-25:
Error:
The term "true" has type "bool" while it is expected to have type "nat".

