test-suite/output/ErrorLocation_tac_in_term_1.v
Goal True.
apply ltac:(apply (S true)).
Abort.
